# atask

./: README.md  pyproject.toml
.github/workflows/: publish.yml
src/atask/: __init__.py
tests/: test_atask.py
