[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[project]
name = "atask"
version = "0.0.0"
description = "AsyncTask"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Rocky Haotian Du", email = "rocky_d@yeah.net" }]
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = []

[project.urls]
Homepage = "https://pypi.org/project/atask/"
Repository = "https://github.com/rocky-d/atask"

[dependency-groups]
dev = [
    "ruff>=0.15.9",
    "ty>=0.0.28",
    "pytest>=8.0.0",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
